# dovela-professional

./: .gitignore  CAMPOS_PROFESIONALES.md  CHANGELOG.md  CONTRIBUTING.md  CORRECCIONES_APLICADAS.md  CORRECCIONES_COMPLETADAS.md  CORRECCIONES_FINALES.md  ESTADO_REFACTORIZACION.md  LAUNCHER_INFO.txt  LICENSE  LTE dovelas.docx  MEJORAS_GRAFICAS.md  MEJORAS_PROFESIONALES_COMPLETADAS.md  Manual_Diamond_Dowels_Profesional.docx  Manual_Usuario_Dovela_Diamante.html  PROMPT.docx  README.md  README_SOLUCION.md  README_WEB.md  RELEASE_NOTES_v2.0.0.md  ROADMAP.md  config_interfaz.ini  deflexion_gui.py  deflexion_gui_complete.py  deflexion_gui_complete_fixed.py  deflexion_gui_fixed.py  deploy_config.yaml  diamond_stress_realistic.py  dovela_analisis_completo.py  dovela_dinamica_simple.py  dovela_profesional_coherente.py  dovela_profesional_final.py  ejecutar_aplicacion.bat  ejecutar_dovela.bat  ejecutar_dovelas.py  github_setup.txt  index.html  instalar.bat  install.bat  install.sh  (+20 more)
api/: main.py  requirements.txt
public/: index.html
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  fea_solver.py  geometry.py  stress_analysis.py
src/gui/: main_window.py
src/utils/: logging_config.py  unit_converter.py  validators.py
web/: app.js  index.html  styles.css
