# Configuración para pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing"
]

# Configuración para black (formateo de código)
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directorios a excluir
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Configuración para mypy (verificación de tipos)
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Configuraciones específicas por módulo
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
    "scipy.*",
    "skfem.*"
]
ignore_missing_imports = true

# Configuración del proyecto
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dovela-diamante-professional"
version = "2.0.0"
description = "Análisis profesional de dovelas diamante según normas AASHTO"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ingeniería Estructural Avanzada", email = "soporte@dovela-diamante.com"}
]
maintainers = [
    {name = "Equipo de Desarrollo", email = "dev@dovela-diamante.com"}
]
keywords = [
    "ingeniería",
    "estructural", 
    "dovelas",
    "análisis",
    "elementos finitos",
    "AASHTO"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
fea = [
    "scikit-fem>=8.0.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0"
]
reports = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "reportlab>=3.6.0"
]

[project.urls]
Homepage = "https://github.com/tu-usuario/dovela-diamante-professional"
Documentation = "https://dovela-diamante-professional.readthedocs.io/"
Repository = "https://github.com/tu-usuario/dovela-diamante-professional.git"
"Bug Tracker" = "https://github.com/tu-usuario/dovela-diamante-professional/issues"

[project.scripts]
dovela-gui = "src.main:main"
dovela-console = "src.main:run_console_mode"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]
